--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
 JWT_SECRET=
 TENCENT_MAP_KEY=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+TYPEORM_HOST=
+TYPEORM_PORT=
+TYPEORM_USERNAME=
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=
+MONGO_URI=
+MONGO_DB=
+TCLOUD_COS_SECRET_ID=
+TCLOUD_COS_SECRET_KEY=
+TCLOUD_COS_BUCKET=
+TCLOUD_COS_REGION=
+TCLOUD_COS_DURATION_SEC=
+TClOUD_COS_DL_EX=
