--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "dev": "nest start --watch",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -25,16 +25,31 @@
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.0.11",
+    "@types/ws": "^8.18.0",
     "axios": "^1.8.1",
+    "child_process": "^1.0.2",
+    "cos-nodejs-sdk-v5": "^2.14.6",
+    "ioredis": "^5.6.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.12.1",
+    "mqtt": "^5.10.4",
+    "node-machine-id": "^1.1.12",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.3",
+    "qcloud-cos-sts": "^3.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.21"
+    "socket.io": "^4.8.1",
+    "typeorm": "^0.3.21",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
